python/lapack_like/euclidean_min.py


def LSE(A,B,C,D,ctrl=None):
  if type(A) is not type(B):
    raise Exception('Matrix types of A and B must match')
  if type(C) is not type(D):
    raise Exception('Matrix types of C and D must match')
  if A.tag != B.tag or B.tag != C.tag or C.tag != D.tag:
    raise Exception('Datatypes of {A,B,C,D} must match')
  if type(A) is Matrix:
    if type(C) is not Matrix:
      raise Exception('Expected C to be a Matrix')
    X = Matrix(A.tag)
    args = [A.obj,B.obj,C.obj,D.obj,X.obj]
    if   A.tag == sTag: lib.ElLSE_s(*args)
    elif A.tag == dTag: lib.ElLSE_d(*args)
    elif A.tag == cTag: lib.ElLSE_c(*args)
    elif A.tag == zTag: lib.ElLSE_z(*args)
    else: DataExcept()
    return X
  elif type(A) is DistMatrix:
    if type(C) is not DistMatrix:
      raise Exception('Expected C to be a DistMatrix')
    X = DistMatrix(A.tag,MC,MR,A.Grid())
    args = [A.obj,B.obj,C.obj,D.obj,X.obj]
    if   A.tag == sTag: lib.ElLSEDist_s(*args)
    elif A.tag == dTag: lib.ElLSEDist_d(*args)
    elif A.tag == cTag: lib.ElLSEDist_c(*args)
    elif A.tag == zTag: lib.ElLSEDist_z(*args)
    else: DataExcept()
    return X
  elif type(A) is SparseMatrix:
    if type(C) is not Matrix:
      raise Exception('Expected C to be a Matrix')
    X = Matrix(A.tag)
    args = [A.obj,B.obj,C.obj,D.obj,X.obj]
    argsCtrl = [A.obj,B.obj,C.obj,D.obj,X.obj,ctrl]
    if   A.tag == sTag: 
      if ctrl==None: lib.ElLSESparse_s(*args)
      else:          lib.ElLSEXSparse_s(*argsCtrl)
    elif A.tag == dTag: 
      if ctrl==None: lib.ElLSESparse_d(*args)
      else:          lib.ElLSEXSparse_d(*argsCtrl)
    elif A.tag == cTag: 
      if ctrl==None: lib.ElLSESparse_c(*args)
      else:          lib.ElLSEXSparse_c(*argsCtrl)
    elif A.tag == zTag: 
      if ctrl==None: lib.ElLSESparse_z(*args)
      else:          lib.ElLSEXSparse_z(*argsCtrl)
    else: DataExcept()
    return X
  elif type(A) is DistSparseMatrix:
    if type(C) is not DistMultiVec:
      raise Exception('Expected C to be a DistMultiVec')
    X = DistMultiVec(A.tag,A.Comm())
    args = [A.obj,B.obj,C.obj,D.obj,X.obj]
    argsCtrl = [A.obj,B.obj,C.obj,D.obj,X.obj,ctrl]
    if   A.tag == sTag: 
      if ctrl==None: lib.ElLSEDistSparse_s(*args)
      else:          lib.ElLSEXDistSparse_s(*argsCtrl)
    elif A.tag == dTag: 
      if ctrl==None: lib.ElLSEDistSparse_d(*args)
      else:          lib.ElLSEXDistSparse_d(*argsCtrl)
    elif A.tag == cTag: 
      if ctrl==None: lib.ElLSEDistSparse_c(*args)
      else:          lib.ElLSEXDistSparse_c(*argsCtrl)
    elif A.tag == zTag: 
      if ctrl==None: lib.ElLSEDistSparse_z(*args)
      else:          lib.ElLSEXDistSparse_z(*argsCtrl)
    else: DataExcept()
    return X
  else: TypeExcept()

# General Linear Model
# ====================
lib.ElGLM_s.argtypes = \
lib.ElGLM_d.argtypes = \
lib.ElGLM_c.argtypes = \
lib.ElGLM_z.argtypes = \
lib.ElGLMDist_s.argtypes = \
lib.ElGLMDist_d.argtypes = \
lib.ElGLMDist_c.argtypes = \
lib.ElGLMDist_z.argtypes = \
lib.ElGLMSparse_s.argtypes = \
lib.ElGLMSparse_d.argtypes = \
lib.ElGLMSparse_c.argtypes = \
lib.ElGLMSparse_z.argtypes = \
lib.ElGLMDistSparse_s.argtypes = \
lib.ElGLMDistSparse_d.argtypes = \
lib.ElGLMDistSparse_c.argtypes = \
lib.ElGLMDistSparse_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p]
lib.ElGLMSparse_s.argtypes = \
lib.ElGLMSparse_c.argtypes = \
lib.ElGLMDistSparse_s.argtypes = \
lib.ElGLMDistSparse_c.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p,LeastSquaresCtrl_s]
lib.ElGLMSparse_d.argtypes = \
lib.ElGLMSparse_z.argtypes = \
lib.ElGLMDistSparse_d.argtypes = \
lib.ElGLMDistSparse_z.argtypes = \
  [c_void_p,c_void_p,c_void_p,c_void_p,c_void_p,LeastSquaresCtrl_d]

def GLM(A,B,D,ctrl=None):
  if type(A) is not type(B):
    raise Exception('Expected types of A and B to match')
  if A.tag != B.tag or B.tag != D.tag:
    raise Exception('Datatypes of {A,B,D} must match')

  if type(A) is Matrix:
    if type(D) is not Matrix:
      raise Exception('Expected D to be a Matrix')
    X = Matrix(A.tag)
    Y = Matrix(A.tag)
    args = [A.obj,B.obj,D.obj,X.obj,Y.obj]
    if   A.tag == sTag: lib.ElGLM_s(*args)
    elif A.tag == dTag: lib.ElGLM_d(*args)
    elif A.tag == cTag: lib.ElGLM_c(*args)
    elif A.tag == zTag: lib.ElGLM_z(*args)
    else: DataExcept()
    return X, Y
  elif type(A) is DistMatrix:
    if type(D) is not DistMatrix:
      raise Exception('Expected D to be a DistMatrix')
    X = DistMatrix(A.tag,MC,MR,A.Grid())
    Y = DistMatrix(A.tag,MC,MR,A.Grid())
    args = [A.obj,B.obj,D.obj,X.obj,Y.obj]
    if   A.tag == sTag: lib.ElGLMDist_s(*args)
    elif A.tag == dTag: lib.ElGLMDist_d(*args)
    elif A.tag == cTag: lib.ElGLMDist_c(*args)
    elif A.tag == zTag: lib.ElGLMDist_z(*args)
    else: DataExcept()
    return X, Y
  elif type(A) is SparseMatrix:
    if type(D) is not Matrix:
      raise Exception('Expected D to be a Matrix')
    X = Matrix(A.tag)
    Y = Matrix(A.tag)
    args = [A.obj,B.obj,D.obj,X.obj,Y.obj]
    argsCtrl = [A.obj,B.obj,D.obj,X.obj,Y.obj,ctrl]
    if   A.tag == sTag:
      if ctrl==None: lib.ElGLMSparse_s(*args)
      else:          lib.ElGLMXSparse_s(*argsCtrl)
    elif A.tag == dTag:
      if ctrl==None: lib.ElGLMSparse_d(*args)
      else:          lib.ElGLMXSparse_d(*argsCtrl)
    elif A.tag == cTag:
      if ctrl==None: lib.ElGLMSparse_c(*args)
      else:          lib.ElGLMXSparse_c(*argsCtrl)
    elif A.tag == zTag:
      if ctrl==None: lib.ElGLMSparse_z(*args)
      else:          lib.ElGLMXSparse_z(*argsCtrl)
    else: DataExcept()
    return X, Y
  elif type(A) is DistSparseMatrix:
    if type(D) is not DistMultiVec:
      raise Exception('Expected D to be a DistMultiVec')
    X = DistMultiVec(A.tag)
    Y = DistMultiVec(A.tag)
    args = [A.obj,B.obj,D.obj,X.obj,Y.obj]
    argsCtrl = [A.obj,B.obj,D.obj,X.obj,Y.obj,ctrl]
    if   A.tag == sTag:
      if ctrl==None: lib.ElGLMDistSparse_s(*args)
      else:          lib.ElGLMXDistSparse_s(*argsCtrl)
    elif A.tag == dTag:
      if ctrl==None: lib.ElGLMDistSparse_d(*args)
      else:          lib.ElGLMXDistSparse_d(*argsCtrl)
    elif A.tag == cTag:
      if ctrl==None: lib.ElGLMDistSparse_c(*args)
      else:          lib.ElGLMXDistSparse_c(*argsCtrl)
    elif A.tag == zTag:
      if ctrl==None: lib.ElGLMDistSparse_z(*args)
      else:          lib.ElGLMXDistSparse_z(*argsCtrl)
    else: DataExcept()
    return X, Y
  else: TypeExcept()

